syntax = "proto3";

package searchium.v2;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

service SearchiumService { 
  // TODO: Replace with capabilities/version negotiation
  rpc Hello(HelloRequest) returns (HelloResponse);
  
  rpc RegisterFolder(FolderRegisterRequest) returns (stream IndexUpdate);
  rpc UnregisterFolder(FolderUnregisterRequest) returns (GenericResponse);
  
  rpc SearchFilePaths(stream FilePathSearchRequest) returns (stream FilePathSearchResponse);
}

message HelloRequest {
  string id = 1;  
}
message HelloResponse {
  string id = 1;
}

message EmptyRequest {}

enum GenericError {
  GENERIC_ERROR_NONE = 0;
}

message GenericResponse { 
  GenericError error = 1;
  string log_message = 2;
}

message FolderRegisterRequest {
  string path = 1;
  repeated string ignore_file_globs = 2;
  repeated string ignore_search_globs = 3;
}

message FolderUnregisterRequest { 
  string path = 1;
}

message IndexUpdate { 
  google.protobuf.Timestamp timestamp = 1;
  message FilesystemScanStart {}
  message FilesystemScanEnd {}
  oneof type { 
    FilesystemScanStart filesystem_scan_start = 10; 
    FilesystemScanEnd filesystem_scan_end = 11; 
  }
}

message FilePathSearchRequest {
  string query = 1;
  uint32 max_results = 2;
}

message FilePathSearchResponse {
  repeated string results = 1;
  google.protobuf.Duration duration = 2;
}